# ClawdUI

./: .env.template  .gitignore  ARCHITECTURE.md  LICENSE  NOTICE  README.md  SUPPORT.md  index.html  package-lock.json  package.json
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml
.github/workflows/: bump-version.yml  ci.yml  release-scheduled.yml  release.yml
docs/: PUBLISHING.md  REMOTE_CONTROL_PROTOCOL.md
fastlane/: .env.template  Appfile  Fastfile  Matchfile  README.md  RELEASING.md
scripts/: cli-wrapper.sh  dev-install.sh  gen-icon.mjs
sidecar/: build.mjs  headless.ts  index.ts  oauth.ts  package-lock.json  package.json  relay.ts  resolveBinary.ts  settings.ts  tsconfig.json  userShellEnv.ts
src/: App.svelte  app.css  main.ts  themes.css
src-tauri/: Cargo.toml  Info.plist  entitlements.appstore.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: headless.rs  lib.rs  main.rs  pty.rs
src/lib/: ActivityBar.svelte  AgentDrawer.svelte  AgentTabs.svelte  AgentTreeNode.svelte  AuthPanel.svelte  CheckpointDrawer.svelte  CodeBlock.svelte  CommandPalette.svelte  CommitModal.svelte  Composer.svelte  DoctorPanel.svelte  DonateButton.svelte  Editor.svelte  EditorTabs.svelte  EmptyState.svelte  ErrorDrillModal.svelte  FeedbackModal.svelte  FieldControl.svelte  FileTree.svelte  FleetView.svelte  HUD.svelte  HookEditor.svelte  HooksDebugger.svelte  InitWizard.svelte  InlinePermissionCard.svelte  McpManager.svelte  MemoryViewer.svelte  MessageBlock.svelte  MobilePair.svelte  ModelPicker.svelte  (+49 more)
(+44 files in other folders)
