[package]
name = "app"
version = "1.0.3"
description = "ClawdUI — Tauri-based UI for Claude Code"
authors = ["SLR Software Solutions Inc"]
license = "Apache-2.0"
repository = "https://github.com/SLR-Software-Solutions-Inc/ClawdUI"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
parking_lot = "0.12"
portable-pty = "0.9"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-updater = "2"
